--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,9 @@
 	<span class="article-duration">{{ .ReadingTime }} min read</span>
 	{{ end }}
 	
+	{{ if eq .Section "post" }}
 	<h1 class="article-title">{{ .Title }}</h1>
+	{{ end }}
 
 	{{ if eq .Section "post" }}
 	<span class="article-date">{{ .Date.Format "2006/01/02" }}</span>
