fixes and updates

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
   <head>
-  	<link rel="icon" type="image/png" href="favicon.ico">
+  	<link rel="icon" type="image/png" href="http://oganm.com/favicon.ico?v=1">
     {{ partial "head.html" . }}
   </head>
   <body>
