--- a/static/css/dropdown.css
+++ b/static/css/dropdown.css
@@ -1,7 +1,10 @@
-
+.nav-links li{
+   vertical-align: middle;
+}
 
 /* The dropdown container */
 .dropdown {
+  vertical-align: middle;
   display: inline-block;
   overflow: hidden;
   
