--- a/static/css/mainoverwrite.css
+++ b/static/css/mainoverwrite.css
@@ -1,9 +1,14 @@
 .content {
-	max-width: 900px;
+	max-width: 1000px;
+}
+
+
+.nav {
+	max-width: 1000px;
 }
 
 .homepage{
-	max-width: 1200px;
+	max-width: 1000px;
 }
 
 .content a {
